Hook up plosone integration tests to continuum.
git-svn-id: http://svn.topazproject.org/svn/head@3898 48088309-b40f-0410-b149-b14953253675